fix overflow in hero

--- a/src/components/modules/index/Hero/Hero.module.scss
+++ b/src/components/modules/index/Hero/Hero.module.scss
@@ -5,6 +5,7 @@
   background-image: $hero-background-color;
   padding-bottom: 10rem;
   min-height: 98.5vh;
+  overflow: hidden;
 }
 
 .container {
